--- a/home.html
+++ b/home.html
@@ -4,162 +4,165 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home - Starlight</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="https://unpkg.com/feather-icons"></script>
+<link rel="icon" href="hybrid.png">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 <style>
-    .fade-enter { opacity: 0; transform: translateY(-10px); }
-    .fade-enter-active { opacity: 1; transform: translateY(0); transition: all 0.3s; }
+  :root {
+    --bg: #f3f4f6;
+    --card: #fff;
+    --accent: #3b82f6;
+    --muted: #6b7280;
+    --online: #22c55e;
+    --hover: #e5e7eb;
+  }
+  *{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif;}
+  body{background:var(--bg);display:flex;flex-direction:column;height:100vh;}
+
+  header{
+    background:var(--card);
+    padding:16px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    box-shadow:0 2px 6px rgba(0,0,0,0.1);
+    position:sticky;top:0;z-index:10;
+  }
+  header h1{font-size:1.5rem;color:#111827;}
+  .search-container{position:relative;}
+  .search-container input{
+    width:0; padding:8px; border-radius:8px; border:1px solid #d1d5db;
+    transition:0.3s; opacity:0; position:absolute; right:0; top:0;
+  }
+  .search-container input.show{width:240px; opacity:1;}
+  .search-container button{background:none;border:none;font-size:1.2rem;cursor:pointer;color:#6b7280;}
+
+  #chat-list, #search-results{flex:1;overflow-y:auto;padding:8px;}
+  .chat-item, .search-item{
+    display:flex;align-items:center;padding:10px;background:var(--card);
+    border-radius:12px;margin-bottom:8px;cursor:pointer;transition:0.2s;position:relative;
+  }
+  .chat-item:hover, .search-item:hover{background:var(--hover);}
+  .chat-item img, .search-item img{width:50px;height:50px;border-radius:50%;object-fit:cover;}
+  .chat-info{margin-left:12px;flex:1;}
+  .chat-info .name{font-weight:600;color:#111827;}
+  .chat-info .email, .chat-info .last-msg{font-size:0.875rem;color:var(--muted);}
+  .chat-time{font-size:0.75rem;color:var(--muted);margin-left:8px;white-space:nowrap;}
+  .online-dot{width:12px;height:12px;background:var(--online);border-radius:50%;border:2px solid var(--card);position:absolute;bottom:0;right:0;}
+
+  .no-chat{text-align:center;padding:32px;color:var(--muted);font-weight:500;}
 </style>
 </head>
-<body class="bg-gray-100 h-screen flex flex-col">
+<body>
 
-<header class="bg-white p-4 flex justify-between items-center shadow">
-    <h1 class="text-xl font-bold">Chats</h1>
-    <div class="relative">
-        <button id="search-btn" class="p-2 rounded-full hover:bg-gray-200">
-            <i data-feather="search"></i>
-        </button>
-        <input id="search-input" type="text" placeholder="Search by name or email"
-               class="absolute right-0 top-0 transform translate-x-full opacity-0 transition-all duration-300 p-2 border rounded w-64">
-    </div>
+<header>
+  <h1>Chats</h1>
+  <div class="search-container">
+    <button id="search-btn"><i class="fas fa-magnifying-glass"></i></button>
+    <input type="text" id="search-input" placeholder="Search by name or email">
+  </div>
 </header>
 
-<div id="search-results" class="bg-white mt-2 rounded shadow max-h-80 overflow-y-auto hidden"></div>
-
-<div id="chat-list" class="flex-1 overflow-y-auto mt-2 p-2 space-y-2"></div>
+<div id="search-results" class="hidden"></div>
+<div id="chat-list" class="no-chat">No chat</div>
 
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
 const SUPABASE_URL = "https://dfzshvldanqfvfivjrqi.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA";
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA"; // replace with your key
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
 const MESSAGES_URL = "https://ilgkibqwngznqwnhgavh.supabase.co";
-const MESSAGES_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlsZ2tpYnF3bmd6bnF3bmhnYXZoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE0NzU3NDcsImV4cCI6MjA3NzA1MTc0N30.jFHL4VDU81BRqxpoWc4u_4VYG4sI-SB0-EkxSfPGZ5k";
+const MESSAGES_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlsZ2tpYnF3bmd6bnF3bmhnYXZoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE0NzU3NDcsImV4cCI6MjA3NzA1MTc0N30.jFHL4VDU81BRqxpoWc4u_4VYG4sI-SB0-EkxSfPGZ5k"; // replace with your key
 const messagesSupabase = createClient(MESSAGES_URL, MESSAGES_KEY);
 
 let hc_profile = JSON.parse(localStorage.getItem('hc_profile') || '{}');
 
-feather.replace();
-
 const searchBtn = document.getElementById("search-btn");
 const searchInput = document.getElementById("search-input");
 const searchResults = document.getElementById("search-results");
+const chatList = document.getElementById("chat-list");
 
 searchBtn.addEventListener("click", () => {
-    const isVisible = searchInput.classList.contains("opacity-100");
-    if (isVisible) {
-        searchInput.classList.remove("opacity-100", "translate-x-0");
-        searchInput.classList.add("opacity-0", "translate-x-full");
-        searchResults.classList.add("hidden");
-    } else {
-        searchInput.classList.remove("opacity-0", "translate-x-full");
-        searchInput.classList.add("opacity-100", "translate-x-0");
-        searchInput.focus();
-    }
+  searchInput.classList.toggle("show");
+  if(searchInput.classList.contains("show")) searchInput.focus();
+  else searchResults.classList.add("hidden");
 });
 
-async function searchUsers(query) {
-    if (!query) return [];
-    const { data, error } = await supabase
-        .from('users')
-        .select('name, email, profile_url, online')
-        .or(`name.ilike.%${query}%,email.ilike.%${query}%`);
-    if (error) console.error(error);
-    return data || [];
+async function searchUsers(query){
+  if(!query) return [];
+  const { data } = await supabase
+    .from('users')
+    .select('name,email,profile_url')
+    .ilike('name', `%${query}%`)
+    .or(`email.ilike.%${query}%`);
+  return data || [];
 }
 
-function renderSearchResults(users) {
-    searchResults.innerHTML = '';
-    users.forEach(user => {
-        const isCurrentUser = user.email === hc_profile.email;
-        const div = document.createElement('div');
-        div.className = "flex items-center p-2 hover:bg-gray-100 cursor-pointer transition rounded fade-enter";
-        div.innerHTML = `
-            <div class="relative">
-                <img src="${user.profile_url}" class="w-10 h-10 rounded-full">
-                ${user.online ? '<span class="absolute bottom-0 right-0 w-3 h-3 bg-green-500 border-2 border-white rounded-full"></span>' : ''}
-            </div>
-            <div class="ml-3 flex-1">
-                <div class="font-semibold">${user.name} ${isCurrentUser ? '(YOU)' : ''}</div>
-                <div class="text-sm text-gray-500">${user.email}</div>
-            </div>
-        `;
-        if (!isCurrentUser) {
-            div.addEventListener('click', () => {
-                window.location.href = `chat.html?name=${encodeURIComponent(user.name)}&email=${encodeURIComponent(user.email)}&profile_url=${encodeURIComponent(user.profile_url)}`;
-            });
-        }
-        searchResults.appendChild(div);
-        setTimeout(() => div.classList.add('fade-enter-active'), 10);
-    });
-    searchResults.classList.toggle('hidden', users.length === 0);
+function renderUsers(users){
+  searchResults.innerHTML = '';
+  if(users.length===0) { searchResults.classList.add('hidden'); return; }
+  users.forEach(user=>{
+    if(user.email === hc_profile.email) return; // skip self
+    const div = document.createElement('div');
+    div.className='search-item';
+    div.innerHTML=`
+      <img src="${user.profile_url}">
+      <div class="chat-info">
+        <div class="name">${user.name}</div>
+        <div class="email">${user.email}</div>
+      </div>
+    `;
+    div.addEventListener('click', ()=>window.location.href=`chat.html?name=${encodeURIComponent(user.name)}&email=${encodeURIComponent(user.email)}&profile_url=${encodeURIComponent(user.profile_url)}`);
+    searchResults.appendChild(div);
+  });
+  searchResults.classList.remove('hidden');
 }
 
-searchInput.addEventListener('input', async (e) => {
-    const query = e.target.value.trim();
-    const users = await searchUsers(query);
-    renderSearchResults(users);
+searchInput.addEventListener('input', async e=>{
+  const users = await searchUsers(e.target.value.trim());
+  renderUsers(users);
 });
 
-async function fetchChatList() {
-    const { data, error } = await messagesSupabase
-        .from('messages')
-        .select('sender, receiver, message, created_at')
-        .or(`sender.eq.${hc_profile.email},receiver.eq.${hc_profile.email}`)
-        .order('created_at', { ascending: false });
+async function fetchChatList(){
+  const { data } = await messagesSupabase
+    .from('messages')
+    .select('sender,receiver,message,created_at')
+    .or(`sender.eq.${hc_profile.email},receiver.eq.${hc_profile.email}`)
+    .order('created_at',{ascending:false});
+  if(!data || data.length===0) { chatList.textContent='No chat'; return; }
 
-    if (error) { console.error(error); return; }
+  const chatMap = new Map();
+  data.forEach(msg=>{
+    const otherEmail = msg.sender===hc_profile.email ? msg.receiver : msg.sender;
+    if(!chatMap.has(otherEmail)) chatMap.set(otherEmail,msg);
+  });
 
-    const chatMap = new Map();
-    data.forEach(msg => {
-        const otherEmail = msg.sender === hc_profile.email ? msg.receiver : msg.sender;
-        if (!chatMap.has(otherEmail)) chatMap.set(otherEmail, msg);
-    });
-
-    renderChatList(Array.from(chatMap.values()));
+  chatList.innerHTML='';
+  for(const [email,msg] of chatMap.entries()){
+    const { data:userData } = await supabase.from('users').select('name,profile_url').eq('email',email).single();
+    if(!userData) continue;
+    const div=document.createElement('div');
+    div.className='chat-item';
+    div.innerHTML=`
+      <img src="${userData.profile_url}">
+      <div class="chat-info">
+        <div class="name">${userData.name}</div>
+        <div class="last-msg">${msg.message}</div>
+      </div>
+      <div class="chat-time">${new Date(msg.created_at).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>
+    `;
+    div.addEventListener('click', ()=>window.location.href=`chat.html?name=${encodeURIComponent(userData.name)}&email=${encodeURIComponent(email)}&profile_url=${encodeURIComponent(userData.profile_url)}`);
+    chatList.appendChild(div);
+  }
 }
 
-async function renderChatList(messages) {
-    const container = document.getElementById('chat-list');
-    container.innerHTML = '';
-
-    for (const msg of messages) {
-        const otherEmail = msg.sender === hc_profile.email ? msg.receiver : msg.sender;
-        const { data: userData } = await supabase
-            .from('users')
-            .select('name, profile_url, online')
-            .eq('email', otherEmail)
-            .single();
-        if (!userData) continue;
-
-        const div = document.createElement('div');
-        div.className = "flex items-center p-2 bg-white rounded hover:bg-gray-100 transition cursor-pointer fade-enter";
-        div.innerHTML = `
-            <div class="relative">
-                <img src="${userData.profile_url}" class="w-12 h-12 rounded-full">
-                ${userData.online ? '<span class="absolute bottom-0 right-0 w-3 h-3 bg-green-500 border-2 border-white rounded-full"></span>' : ''}
-            </div>
-            <div class="ml-3 flex-1">
-                <div class="font-semibold">${userData.name}</div>
-                <div class="text-gray-500 text-sm truncate">${msg.message}</div>
-            </div>
-            <div class="text-xs text-gray-400 ml-2">${new Date(msg.created_at).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>
-        `;
-        div.addEventListener('click', () => {
-            window.location.href = `chat.html?name=${encodeURIComponent(userData.name)}&email=${encodeURIComponent(otherEmail)}&profile_url=${encodeURIComponent(userData.profile_url)}`;
-        });
-        container.appendChild(div);
-        setTimeout(() => div.classList.add('fade-enter-active'), 10);
-    }
-}
-
-messagesSupabase.channel('realtime-messages')
-    .on('postgres_changes', { event: '*', schema: 'public', table: 'messages' }, payload => {
-        fetchChatList();
-    })
-    .subscribe();
+// Realtime online tracking
+const channel = supabase.channel('online-status')
+  .on('postgres_changes', { event:'UPDATE', schema:'public', table:'users' }, payload=>{
+    fetchChatList();
+  })
+  .subscribe();
 
 fetchChatList();
 </script>
